licenses and readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+# Compiled class files
 /target/
+*.class
+*.jar
+
+# Test 
+/test-output/
+
+# Eclipse files or directories
+.classpath
+.project
+.settings
